@@ -1,4 +1,6 @@
 2006-07-26:
+	* src/pam_krb5_storetmp.c(main): only use strtoll() if it's
+	available, otherwise just use strtol().
 	* src/stash.c(_pam_krb5_stash_clone): go back to overwriting the
 	template, to avoid uncontrolled growth in the filename.
 	* src/session.c(pam_sm_open_session): specify the current real
